<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BenchmarkActivity" >

    <Button
        android:id="@+id/but_bt_device"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/but_bt_discov"
        android:layout_alignLeft="@+id/but_client"
        android:text="@string/but_bt_device" />

    <Button
        android:id="@+id/but_realtime_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="21dp"
        android:text="@string/but_realtime_100" />

    <Button
        android:id="@+id/but_realtime_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_realtime_50"
        android:layout_alignBottom="@+id/but_realtime_50"
        android:layout_alignLeft="@+id/but_bt_device"
        android:text="@string/but_realtime_10" />

    <Button
        android:id="@+id/but_realtime_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_realtime_100"
        android:layout_alignBottom="@+id/but_realtime_100"
        android:layout_alignRight="@+id/but_bt_state"
        android:text="@string/but_realtime_50" />

    <ToggleButton
        android:id="@+id/but_realtime_stop_delay"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/but_bt_device"
        android:text="@string/but_realtime_stop" />

    <Button
        android:id="@+id/but_realtime_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_realtime_array"
        android:layout_alignBottom="@+id/but_realtime_array"
        android:layout_alignLeft="@+id/but_realtime_100"
        android:text="@string/but_realtime_class" />

    <Button
        android:id="@+id/but_realtime_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/but_realtime_50"
        android:text="@string/but_realtime_array" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_realtime_class"
        android:layout_alignLeft="@+id/but_realtime_class"
        android:layout_marginBottom="15dp"
        android:text="@string/label_send_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/TextView01"
        android:text="@string/label_bt_state"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/but_client"
        android:text="@string/label_client"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/but_bt_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/but_bt_state" />

    <ToggleButton
        android:id="@+id/but_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_bt_state"
        android:layout_alignBottom="@+id/but_bt_state"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/but_client" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/but_realtime_100"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/but_realtime_50"
        android:text="@string/label_serial"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/but_serial_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="19dp"
        android:text="@string/but_serial_class" />

    <Button
        android:id="@+id/but_serial_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_serial_class"
        android:layout_alignBottom="@+id/but_serial_class"
        android:layout_alignLeft="@+id/but_realtime_array"
        android:text="@string/but_serial_array" />

    <Button
        android:id="@+id/but_bt_discov"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/but_server"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/but_bt_discov" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_server"
        android:layout_alignLeft="@+id/TextView02"
        android:text="@string/label_server"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/but_bt_discov"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="21dp"
        android:text="@string/label_realtime_delay"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/but_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_bt_state"
        android:layout_alignBottom="@+id/but_bt_state"
        android:layout_alignLeft="@+id/but_bt_discov"
        android:text="@string/but_server" />

</RelativeLayout>